# Stelline

./: .gitignore  README.md  pyproject.toml
scripts/systemd/: stelline-harvest.service  stelline-harvest.timer
stelline/: __init__.py  auth.py  cli.py  config.py  context.py  discovery.py  llm.py  pipeline.py  tracker.py
stelline/parsers/: __init__.py  pi.py
tests/: test_auth.py  test_cli.py  test_config.py  test_context.py  test_discovery.py  test_llm.py  test_parser.py  test_pipeline.py  test_tracker.py
tests/fixtures/: sample_session.jsonl
